--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,47 @@
   margin: 0px ;
   padding: 0px ;
 }
+
+.navbarBg {
+  background: linear-gradient(to bottom, #000066 0%, #ffccff 100%);
+}
+
+.hoverDiv:hover {
+  box-shadow: 0px 0px 4px rgba(99, 96, 96, 0.7)
+}
+
+.hoverNavItems:hover {
+  border-radius: 5px;
+  opacity: 0.4
+}
+body {
+  height: 100%;
+}
+
+.tasbihBg {
+  background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
+}
+
+.tasbihDiv{
+  background: linear-gradient(to bottom, #33ccff 0%, #99ff99 100%);
+  transition: transform .1s;
+}
+
+.tasbihDiv:hover{
+  box-shadow: 0px 0px 4px rgba(99, 96, 96, 0.7);
+  /* transform: scale(1.1); */
+}
+
+.tasbihInsideDiv {
+  background: linear-gradient(to bottom, #009999 0%, #ccff33 100%);
+  transition: transform .5s;
+}
+
+.tasbihInsideDiv:hover {
+  transform: scale(1.1);
+}
+
+.tasbihBtn{
+  background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
+  border: 1px solid black;
+}
