--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,10 @@ body {
 }
 
 .tasbihBtn{
-  background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
+  background: linear-gradient(to bottom, #009999 0%, #ccff33 100%);
   border: 1px solid black;
+}
+
+.arabicFont {
+  font-family: 'Noto Naskh Arabic', serif;
 }
